--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.9.3"
+    "@directus/sdk": "^11.0.0",
+    "@ts-stack/markdown": "^1.4.0",
+    "astro": "^2.9.3",
+    "tsparticles": "^2.11.1",
+    "tsparticles-engine": "^2.11.1"
   }
 }
