--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,12 @@ jobs:
           node-version: 16.x
       - run: npm ci --production
       - run: npm run build
-      - name: Rclone Setup
-        uses: NiceLabs/rclone-action@master
-        with:
-          github-token: ${{ secrets.SECRET_TOKEN }}
-          config: ${{ secrets.RCLONE_CONFIG }}
-          config-secret-name: RCLONE_CONFIG
       - name: Upload
-        run: rclone sync ./dist r2:uma-cafe-main
+        uses: andreiio/rclone-action@v1
+        with:
+          args: sync dist r2:uma-cafe-main
         env:
-          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
+          RCLONE_CONFIG_R2_TYPE: s3
+          RCLONE_CONFIG_R2_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
+          RCLONE_CONFIG_R2_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+          RCLONE_CONFIG_R2_ENDPOINT: ${{ secrets.R2_ENDPOINT }}
