--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@directus/sdk": "^11.0.0",
     "@ts-stack/markdown": "^1.4.0",
     "astro": "^2.9.3",
+    "astro-icon": "^0.8.1",
     "tsparticles": "^2.11.1",
     "tsparticles-engine": "^2.11.1"
   },
