--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.0.0",
     "@directus/sdk": "^11.0.0",
     "@ts-stack/markdown": "^1.4.0",
     "astro": "^2.9.3",
