--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ts-stack/markdown": "^1.4.0",
     "astro": "^2.9.3",
     "astro-icon": "^0.8.1",
+    "ical-generator": "^6.0.1",
     "tsparticles": "^2.11.1",
     "tsparticles-engine": "^2.11.1"
   },
